# chatagent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CODEX_TASK.md  Dockerfile  Makefile  README.md  REPORT.md  SECURITY.md  chatagent_full_hello.patch  docker-compose.yml  eslint.config.js  mkdocs.yml  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
backend/: .env.example  README.md  config.toml  pyproject.toml  requirements-test.txt
backend/adapters/llm/: __init__.py  mock.py  openai.py  provider.py
backend/app/models/: __init__.py  agent.py  event.py  intent.py  simulation_config.py  world_state.py
backend/app/schemas/: event.schema.json  simulation_config.schema.json
backend/app/services/: validation.py  world.py
backend/app/static/: app.js
backend/app/templates/: index.html
backend/chatagent/: app.py  cli.py  errors.py  logging.py  settings.py  sim_cli.py  simulation.py
backend/chatagent/agents/: inner.py  outer.py  shared.py
backend/chatagent/app/: __init__.py  main.py
backend/chatagent/app/models/: api.py
backend/chatagent/core/: __init__.py  agent.py  rule_based_agent.py
backend/chatagent/core/engine/: conversation.py
backend/chatagent/db/: core.py  models.py
backend/chatagent/memory/: __init__.py  metrics.py  store.py
backend/chatagent/models/: agent.py  event.py  world_state.py
backend/chatagent/providers/: google.py
backend/chatagent/schemas/: agent.schema.json  intent.schema.json  world_state.schema.json
backend/chatagent/services/: __init__.py  llm.py  persistence.py  scheduler.py  world.py
backend/chatagent/static/: chatagent.js
backend/chatagent/templates/: index.html
backend/chatagent/tools/: git.py  shell.py
backend/chatagent/web/templates/: index.html  index.py
backend/data/: scenario_example.json  scenario_invalid.json
backend/systemd/: chatagent.service
backend/tests/: README.md  conftest.py  test_api.py  test_api_validate_scenario.py  test_cli_help.py  test_cli_run.py  test_config_logging_error.py  test_conversation_engine.py  test_hello_flow.py  test_llm_stub.py  test_memory_metrics.py  test_persistence.py  test_root_route.py  test_scenario_parser.py  test_scenario_validation.py  test_scheduler.py  test_world.py
backend/tests/adapters/: test_llm.py
chatagent/: app.py  settings.py
docs/: ARCHITECTURE.md  AUDIT.md  DOMAIN.md  REPORT-install-scripts.md  REPORT.md  (+10 more)
(+36 files in other folders)
