[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatagent"
version = "0.1.0"
description = "MVP of ChatAgent (outer/inner worker, SQLite memory, Google provider, shell tools)"
authors = [{name = "ChatAgent", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "starlette>=0.38",
    "typer>=0.12",
    "colorama>=0.4",
    "rich>=13.7",
]

[project.optional-dependencies]
embeddings = ["tiktoken>=0.7", "faiss-cpu>=1.8.0.post1; platform_system!='Windows'"]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10", "pre-commit>=3.7"]

[project.scripts]
chatagent = "chatagent.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["call-arg"]
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
