[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatagent"
version = "0.1.0"
description = "MVP of ChatAgent (outer/inner worker, SQLite memory, Google provider, shell tools)"
authors = [{name="ChatAgent", email="dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "starlette>=0.38",
    "typer>=0.12",
    "colorama>=0.4",
    "rich>=13.7",
    "tiktoken>=0.7",
    "faiss-cpu>=1.8.0.post1; platform_system!='Windows'",
    "jsonschema>=4.19",
    "PyYAML>=6.0",
]
[project.scripts]
chatagent = "chatagent.cli:app"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.1.0",
    "pytest>=7.0"
]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I"]
